@@ -17,73 +17,65 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import sv.gob.cementerios.cementeriosle.security.JwtAuthenticationFilter;
-
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    // 1. Inyectamos el filtro. Spring lo encuentra porque tiene @Component en su clase.
     @Autowired
     private JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    // Define que BCrypt se usará para codificar/verificar contraseñas
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
-        return authenticationConfiguration.getAuthenticationManager();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 
-    // Configuración CORS
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Asegúrate de que esta URL sea la correcta para tu proyecto Angular
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+        // Se agregó PATCH para el cambio de clave
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(csrf -> csrf.disable()) // Deshabilita CSRF para APIs REST
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Aplica la configuración CORS
-
-                .sessionManagement(session -> session
-                        // Spring Security no creará ni usará sesiones HTTP (es Stateless, para JWT)
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-
-                // Configuración de Autorización
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // Ruta de Login (Auth) es pública
-                        .requestMatchers("/api/auth/login").permitAll()
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers(HttpMethod.PATCH, "/api/usuarios/actualizar-password-temporal").permitAll()
 
-                        // esto es para dar acceso a informatica a solo crear Usuarios
-                        .requestMatchers(HttpMethod.POST, "/api/usuarios/**").hasRole("INFORMATICA")
-                        .requestMatchers(HttpMethod.GET, "/api/usuarios/**").hasRole("INFORMATICA")
+                        // Solo Informática crea usuarios
+                        .requestMatchers(HttpMethod.POST, "/api/usuarios/crear").hasRole("INFORMATICA")
 
-                        // para que ambos puedan visualizar lo mismo
+                                // 1. CONSULTA y los demás pueden ver (GET) todos los cementerios
+                                .requestMatchers(HttpMethod.GET, "/api/v1/cementerios/**")
+                                .hasAnyRole("ADMIN", "INFORMATICA", "CONSULTA", "OPERADOR")
 
-                        .requestMatchers("/api/v1/cementerios/**").hasAnyRole("INFORMATICA", "ADMIN")
+                                // 2. Solo ADMIN e INFORMATICA pueden Crear, Editar o Borrar (POST, PUT, DELETE)
+                                .requestMatchers(HttpMethod.POST, "/api/v1/cementerios/**").hasAnyRole("ADMIN", "INFORMATICA")
+                                .requestMatchers(HttpMethod.PUT, "/api/v1/cementerios/**").hasAnyRole("ADMIN", "INFORMATICA")
+                                .requestMatchers(HttpMethod.DELETE, "/api/v1/cementerios/**").hasAnyRole("ADMIN", "INFORMATICA")
+
+
                         .anyRequest().authenticated()
                 );
 
-        // INSERCIÓN DEL FILTRO JWT
-        // Se añade antes del filtro estándar de autenticación de usuario y contraseña
         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-
         return http.build();
     }
 }
